--- a/src/index.css
+++ b/src/index.css
@@ -13,21 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+html, body {
+  height: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  overflow: auto; /* ← スクロール可能にする */
+  overflow-y: auto; /* ← hiddenだとスクロールできなくなる */
 }
 
 h1 {
@@ -35,14 +26,11 @@ h1 {
   line-height: 1.1;
 }
 
+h2 {
+  margin: 0;
+}
+
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
