--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  text-align: center; /* 中央揃えにする */
+  text-align: center;
 }
 
 .App-header {
@@ -22,39 +22,28 @@
   flex-direction: column;
 }
 
-/* 共通=============================================================================== */
-
-
-
 /* 初期画面============================================================================ */
-
-.start-screen {
-  background-image: url('/img/other/top.png'); /* 画像パスはプロジェクトに合わせて */
+.top-screen {
+  width: 100%;
+  height: 100vh;
+  color: white;
+  font-family: 'Arial', sans-serif;
+  background-image: url('/img/other/top.png');
   background-size: cover;
   background-position: center;
-  height: 100vh;
-  width: 100%;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  text-align: center;
-  color: white;
-  font-family: 'Arial', sans-serif;
 }
 
-.start-screen h1 {
+.top-screen h1 {
   font-size: 3rem;
-  font-weight: bold;
   margin-bottom: 1.5rem;
   text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
 }
 
-.start-screen button {
-  background-color: white;
-  color: black;
+.top-screen button {
   border: none;
   padding: 0.7rem 1.5rem;
   font-size: 1.2rem;
@@ -62,10 +51,9 @@
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  transform: translateY(0);
 }
 
-.start-screen button:hover {
+.top-screen button:hover {
   background-color: #f1c40f; 
   color: white;
   box-shadow: 0 8px 20px rgba(241, 196, 15, 0.7); 
@@ -77,9 +65,6 @@
 .select-area {
   width: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* 下部ボタン配置のためOK */
   padding: 40px 20px;
   background-color: #e6f7ff;
   background-image:
@@ -91,13 +76,8 @@
 
 .select-area > .content {
   height: 100%;
-  flex-grow: 1;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-top: 10px; 
-  max-width: 100%;    
+  flex-direction: column;  
 }
 
 .op-poke-select, .my-poke-select {
@@ -106,24 +86,19 @@
   justify-content: center;
   gap: 20px;
   margin: 20px 0;
+  box-sizing: border-box;
 }
 
 .poke-option, .poke-preview {
   height: 100%;
-  cursor: pointer;
-  text-align: center;
   padding: 10px;
-  border-radius: 10px;
-  transition: 0.2s;
 }
 
 .poke-option {
-  border: 2px solid lightgray; /* ← 選択前も枠を表示 */
-  background-color: transparent; /* デフォルトでは背景なし */
-}
-
-.poke-preview {
-  border: 2px solid transparent;
+  border: 2px solid lightgray;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: 0.2s;
 }
 
 .poke-option img, .poke-preview img {
@@ -146,20 +121,11 @@
   background-color: #fffde7;
 }
 
-.order-num{
-  display: block;
-  margin-top: 5px;
-  font-weight: bold;
-  color: #333;
-}
-
 .select-actions {
-  width: 100%;
-  height: 100px; /* ボタン分のスペース */
+  height: 100px;
   display: flex;
-  justify-content: center; /* ← 横中央 */
-  align-items: center;     /* ← 縦中央（あまり関係ないけど整える） */
-  overflow: hidden; /* ← これを追加して内部の高さ変動を抑える */
+  justify-content: center; 
+  align-items: center; 
 }
 
 .select-actions button {
@@ -174,12 +140,12 @@
 .select-actions button.active {
   background-color: #94f097;
   transition: all 0.2s ease;
-  transform: scale(1); /* 初期状態 */
+  transform: scale(1);
 }
 
 .select-actions button.active:hover {
-  transform: scale(1.1); /* 拡大する */
-  background-color: #17e71e; /* 明るめの赤に変化（任意） */
+  transform: scale(1.1);
+  background-color: #17e71e;
   font-weight: bold;
 }
 
@@ -191,162 +157,288 @@
 
 .battle-area-wrap{
   width: 100%;
+  height: 100%;
+  background-color: #fff4c8;
+  padding: 50px 0;
 }
 
 .battle-area {
-  display: flex;
-  justify-content: space-between;
   width: 80%;
-  max-width: 1200px; /* 必要に応じて調整 */
+  height: 400px;
+  justify-content: space-between;
   margin: 0 auto;
 }
 
 .op-poke-area-wrap,
 .my-poke-area-wrap {
+  width: 45%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 45%; /* 両方のエリアの幅を同じにする */
-  height: 400px; /* 必要な高さを設定 */
   padding: 10px;
-  border: 2px solid #ccc;
-  border-radius: 10px;
-  background-color: #f4f4f4;
   justify-content: space-between;
   box-sizing: border-box;
-  position: relative;
 }
 
-/* テキスト系（技名、倒れたテキストなど） */
-.txt-area {
-  height: 100px;
-  display: flex;
-  overflow: hidden;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  color: black;
-  font-size: 1.2rem;
-  flex: 1; /* テキストエリアが残りのスペースを占める */
-  width: 100%;
-}
-
-/* ポケモン画像と名前のエリア */
 .my-poke-area,
 .op-poke-area {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 0 0 300px; /* 画像エリアは固定幅を持つ */
-  margin-bottom: 10px;
-  position: relative;
-  height: 100%; /* 親がしっかり高さを持っている前提 */
-  justify-content: flex-end; /* 下寄せ or center にするのもアリ */
+  flex: 0 0 300px;
+  justify-content: flex-end; 
 }
 
-.my-poke,
-.op-poke {
-  margin-top: 10px;
-  font-size: 1.3rem;
-  font-weight: bold;
-  color: black;
-}
-
-.op-poke-area-wrap h1,
-.my-poke-area-wrap h1 {
-  font-size: 1.5rem;
-  margin: 10px 0;
+.poke-ground {
+  width: 90%;
+  height: 50px;
+  background-color: #bbb; 
+  border-radius: 50%;
 }
 
 .op-poke-area-wrap img,
 .my-poke-area-wrap img {
-  object-fit: contain;
   width: 220px;
   height: 220px;
-  object-fit: cover;
-  display: block;
+  position: absolute;
 }
 
-.op-hp-area,
-.my-hp-area {
-  width: 100%;
-  padding: 5px 20px;
+.status-box {
+  width: 90%;
+  background-color: #144a80; 
+  border-radius: 12px;
+  padding: 10px 16px;
+  margin-top: 20px;
+  color: white;
   box-sizing: border-box;
+}
+
+.status-header {
   display: flex;
-  justify-content: flex-start;
   align-items: center;
+}
+
+.my-poke,
+.op-poke {
+  width: 100%;
+  text-align: left;
+  margin: 10px 0;
+  font-size: 1.5rem;
+}
+
+.poke-indicators {
+  display: flex;
+  margin: 10px;
+  gap: 6px;
+}
+
+.poke-circle {
+  width: 20px;
+  height: 20px;
+  box-sizing: border-box;
+  border: 1px solid rgba(0, 0, 0, 1);
+  border-radius: 50%;
+}
+
+.poke-circle.green {
+  background-color: #00ff00;
+}
+
+.poke-circle.yellow {
+  background-color: gold;
+}
+
+.poke-circle.gray {
+  background-color: gray;
 }
 
 .op-hp-container,
 .my-hp-container {
-  width: 100%;
   height: 16px;
   background-color: #ddd;
   border-radius: 10px;
   overflow: hidden;
-  position: relative;
 }
 
 .op-hp-bar,
 .my-hp-bar {
   height: 100%;
-  background-color: #00ff00;  /* デフォルト：緑 */
+  background-color: #00ff00;  
   transition: width 0.5s ease, background-color 0.3s ease;
 }
 
 .my-hp-bar.mid,
 .op-hp-bar.mid {
-  background-color: #ffcc00; /* 黄色 */
+  background-color: #ffcc00;
 }
 
 .my-hp-bar.low,
 .op-hp-bar.low {
-  background-color: #ff0000; /* 赤 */
+  background-color: #ff0000;
 }
 
-/* ポケモンが死亡した場合に適用されるクラス */
 .pokemon-dead {
   animation: sinkAnimation 2s forwards;
 }
 
-/* コマンドボタン======================================================= */
-.cmd-area {
+/* コマンドエリア======================================================= */
+.cmd-text-area {
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  margin-top: 40px;
 }
 
-.cmd-buttons {
+.text-area {
+  width: 60%;
+  background-color: #e0e0e0;
+  color: #333;
+  padding: 5px 10px;
+  border-radius: 8px;
+  text-align: left;
+  box-sizing: border-box;
+  font-size: 1.2rem;
+  font-family: 'Press Start 2P', 'Courier New', monospace;
+  border: 2px solid #444;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+}
+
+.text-area p {
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+.cmd-area {
   display: flex;
-  gap: 20px; /* ボタン同士の間隔 */
+  background-color: #e0e0e0;
+  padding: 15px 30px;
+  border-radius: 8px;
+  border: 2px solid #444;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+  gap: 20px;
 }
 
-.cmd-area button {
+.cmd-text-area button {
+  width: 200px;
   padding: 10px 20px;
   font-size: 1.2rem;
   cursor: pointer;
-  background-color: #4CAF50;
-  color: white;
   border: none;
   border-radius: 5px;
   transition: background-color 0.3s;
+  box-sizing: border-box;
 }
 
-.cmd-area button:hover {
-  background-color: #45a049;
+.cmd-text-area button:hover {
+  transform: scale(1.1); 
+  font-weight: bold;
 }
 
+.weapon-cmd-btn{
+  background-color: #4CAF50;
+  color: white;
+}
+
+.change-cmd-btn{
+  background-color: lightblue;
+  color: white;
+}
+
+.cancel-cmd-btn{
+  background-color: white;
+  color: black;
+}
+
+/* 勝敗画面============================================================= */
+.result-screen {
+  /* position: fixed;  */
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center;
+}
+
+.result-screen.win {
+  background-color: #fff8c6; 
+}
+
+.result-screen.lose {
+  background-color: #1a1a1a; 
+}
+
+.result-screen h1 {
+  font-size: 6rem;
+  transition: transform 1s ease-out, opacity 1s ease-out; 
+  margin-bottom: 1rem;
+}
+
+.result-screen.win h1 {
+  color: #e3a008;
+  animation: scale-up 1s ease-out forwards;
+}
+
+.result-screen.lose h1 {
+  color: white;
+  text-shadow: 0 0 10px rgba(255, 0, 0, 0.7); 
+  animation: slide-down 1s ease-out forwards;
+}
+
+.result-screen button {
+  width: 200px;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  box-sizing: border-box;
+}
+
+.result-screen button:hover {
+  transform: scale(1.1); 
+  font-weight: bold;
+}
 
 /* アニメーション========================================================= */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to   { opacity: 1; transform: translateY(0); }
+}
+
 @keyframes sinkAnimation {
   0% {
     transform: translateY(0);
     opacity: 1;
   }
   100% {
-    transform: translateY(100px); /* 画像が下に100px沈む */
+    transform: translateY(100px);
     opacity: 0;
+  }
+}
+
+@keyframes scale-up {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-down {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
