--- a/src/App.css
+++ b/src/App.css
@@ -278,6 +278,22 @@
   background-color: #ff0000;
 }
 
+.jump {
+  animation: jump 0.4s ease;
+}
+
+.my-attack {
+  animation: myAttackMove 0.5s ease-in-out forwards;
+}
+
+.op-attack {
+  animation: opAttackMove 0.5s ease-in-out forwards;
+}
+
+.pokemon-damage-effect {
+  animation: damageEffect 0.4s ease-in-out;
+}
+
 .pokemon-dead {
   animation: sinkAnimation 2s forwards;
 }
@@ -408,6 +424,73 @@
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(10px); }
   to   { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes jump {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-30px); }
+  100% { transform: translateY(0); }
+}
+
+/* 攻撃エフェクト */
+@keyframes myAttackMove {
+  0% {
+    transform: translateX(0) rotate(0deg);
+  }
+  50% {
+    transform: translateX(-50px) rotate(-30deg); /* 左に50px移動して、-30度回転 */
+  }
+  100% {
+    transform: translateX(0) rotate(0deg); /* 元の位置に戻る */
+  }
+}
+
+@keyframes opAttackMove {
+  0% {
+    transform: translateX(0) rotate(0deg);
+  }
+  50% {
+    transform: translateX(50px) rotate(30deg); /* 左に50px移動して、-30度回転 */
+  }
+  100% {
+    transform: translateX(0) rotate(0deg); /* 元の位置に戻る */
+  }
+}
+
+@keyframes damageEffect {
+  0% {
+    opacity: 1;
+  }
+  10% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  30% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes sinkAnimation {
