--- a/src/App.css
+++ b/src/App.css
@@ -259,13 +259,25 @@
   background-color: #ddd;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
 }
 
 .op-hp-bar,
 .my-hp-bar {
+  width: 100%;
   height: 100%;
-  background-color: #00ff00;  
-  transition: width 0.5s ease, background-color 0.3s ease;
+  background-color: #00ff00;
+  transition: width 0.6s ease, background-color 0.3s ease; /* widthに対するtransitionを追加 */
+}
+
+.hp-text {
+  position: absolute;
+  right: 8px; /* こっちで余白を作る */
+  top: 50%;
+  transform: translateY(-50%);
+  color: white;
+  font-size: 14px;
+  pointer-events: none;
 }
 
 .my-hp-bar.mid,
