--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@
 }
 
 .battle-area {
-  width: 80%;
+  width: 100%;
   height: 450px;
   justify-content: space-between;
   margin: 0 auto;
@@ -566,6 +566,303 @@
 .cancel-cmd-btn {
   background-color: white;
   color: black;
+}
+
+@media screen and (max-width: 600px) {
+  .select-area {
+    padding: 0;
+  }
+
+  .select-area>.content {
+    height: 100%;
+  }
+
+  .op-poke-select,
+  .my-poke-select {
+    gap: 0;
+    margin: 0;
+  }
+
+  .poke-option,
+  .poke-preview {
+    height: 100%;
+    width: 15%;
+    padding: 0;
+  }
+
+  .poke-option img,
+  .poke-preview img {
+    width: auto;
+    height: 50%;
+  }
+
+  .poke-option p,
+  .poke-preview p {
+    margin: 0px;
+    font-weight: 350;
+    font-size: 0.9rem;
+  }
+
+  .select-actions {
+    height: 80px;
+  }
+
+  .select-actions button {
+    height: 50px;
+    padding: 0 20px;
+    font-size: 0.9rem;
+  }
+
+  /* //================================ */
+  .battle-area-wrap {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .battle-area {
+    width: 100%;
+    height: 40%;
+    margin: 0 auto;
+  }
+
+  .op-poke-area-wrap,
+  .my-poke-area-wrap {
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+  }
+
+  .my-poke-area,
+  .op-poke-area {
+    width: 100%;
+    height: 100%;
+    flex: 0 0 0px;
+    margin-top: 40px;
+    /* justify-content: flex-start; */
+  }
+
+  .poke-img-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    /* align-items: flex-start; */
+  }
+
+  /* テラスタル画像の表示 */
+  .terastal-img {
+    width: 25%;
+    top: -30px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+  }
+
+  /* ポケモン画像 */
+  .my-poke-img,
+  .op-poke-img {
+    width: 50%;
+    height: auto;
+    position: relative;
+    z-index: 5;
+  }
+
+  .poke-ground {
+    width: 60%;
+    height: 50px;
+  }
+
+  .status-box {
+    width: 80%;
+    padding: 3px 5px;
+    margin-top: 2px;
+  }
+
+  .my-poke,
+  .op-poke {
+    margin: 1px 0;
+    font-size: 0.9rem;
+  }
+
+  .type-wrapper {
+    display: flex;
+    /* タイプ同士も横並びにする！ */
+    gap: 4px;
+    /* タイプ1とタイプ2の間にちょっとすき間 */
+    margin-left: 8px;
+    /* 名前とタイプの間を空ける */
+  }
+
+  .type-box {
+    padding: 1px 3px;
+    border: 1px solid;
+    border-radius: 8px;
+    color: white;
+    font-weight: bold;
+    min-width: 36px;
+    text-align: center;
+    font-size: 0.6em;
+    /* 名前の70%の大きさに設定 */
+  }
+
+  .condition {
+    padding: 2px 6px;
+    border: 2px solid;
+    border-radius: 8px;
+    color: white;
+    font-weight: bold;
+    min-width: 48px;
+    text-align: center;
+    font-size: 0.6em;
+    /* 名前の70%の大きさに設定 */
+  }
+
+  .poke-indicators {
+    display: flex;
+    margin: 3px;
+    gap: 3px;
+  }
+
+  .poke-circle {
+    width: 10px;
+    height: 10px;
+    border: 1px solid rgba(0, 0, 0, 1);
+  }
+
+  .op-hp-container,
+  .my-hp-container {
+    height: 8px;
+  }
+
+  .hp-text {
+    right: 8px;
+    /* こっちで余白を作る */
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 9px;
+  }
+
+  /* コマンドエリア======================================================= */
+  .cmd-text-area {
+    height: 50px;
+    margin-top: 8x;
+  }
+
+  .text-area {
+    width: 90%;
+    padding: 2px 4px;
+    box-sizing: border-box;
+    font-size: 0.9rem;
+  }
+
+  .cmd-area {
+    width: 90%;
+    padding: 5px 10px;
+    gap:3px;
+  }
+
+  .status-area {
+    display: flex;
+    border-radius: 8px;
+    border: 2px solid #444;
+    /* padding: 10px 20px; */
+    position: relative;
+    width: fit-content;
+  }
+
+  .status-area-wrapper button {
+    height: 10px;
+    margin: auto 0 2px 5px;
+  }
+
+  .status-area::before {
+    position: absolute;
+    top: 5%;
+    bottom: 5%;
+    left: 50%;
+    width: 2px;
+  }
+
+  .poke-status {
+    padding: 3px 3px;
+  }
+
+  .poke-status p {
+    margin: 0;
+  }
+
+  .label {
+    width: 10px;
+  }
+
+  .buff-row {
+    gap: 1px;
+  }
+
+  .shape {
+    width: 3px;
+    height: 3px;
+  }
+
+  /* ▲ 上向き三角形 */
+  .shape.up {
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 10px solid red;
+  }
+
+  /* ▼ 下向き三角形 */
+  .shape.down {
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 10px solid blue;
+  }
+
+  /* ・点（丸） */
+  .shape.neutral {
+    width: 10px;
+    height: 10px;
+  }
+
+  .weapon-cmd-area {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 0 auto;
+  }
+
+  .cmd-text-area button {
+    /* width: unset; */
+    padding: 2px 4px;
+    font-size: 0.9rem;
+  }
+
+  .weapon-cmd-btn {
+    width: 30%;
+    margin-right: 8px;
+  }
+
+  .terastal-cmd-btn {
+    margin-right: 8px;
+  }
+
+  .tooltip {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    top: 50px;
+    /* 調整可能 */
+    left: 50%;
+    /* 調整可能 */
+    transform: translateX(-50%);
+    font-size: 14px;
+    width: 150px;
+  }
+
 }
 
 /* 勝敗画面============================================================= */
