--- a/src/App.css
+++ b/src/App.css
@@ -398,11 +398,14 @@
 
 .text-area {
   width: 50%;
+  height: 100%;
   background-color: #e0e0e0;
   color: #333;
   padding: 5px 10px;
   border-radius: 8px;
+  display: flex;
   text-align: left;
+  align-items: center;
   box-sizing: border-box;
   font-size: 1.2rem;
   font-family: 'Press Start 2P', 'Courier New', monospace;
