--- a/src/App.css
+++ b/src/App.css
@@ -188,17 +188,6 @@
   box-sizing: border-box;
 }
 
-.poke-img-wrapper {
-  position: relative;
-  width: 220px;
-  height: 240px;
-  /* 少し伸ばすことで下に下がる */
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  /* 下に寄せる */
-}
-
 .my-poke-area,
 .op-poke-area {
   width: 100%;
@@ -209,6 +198,17 @@
   justify-content: flex-end;
   position: relative;
   /* ラップの基準になる */
+}
+
+.poke-img-wrapper {
+  position: relative;
+  width: 220px;
+  min-height: 240px;
+  /* 少し伸ばすことで下に下がる */
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  /* 下に寄せる */
 }
 
 /* テラスタル画像の表示 */
@@ -663,8 +663,9 @@
 
   .battle-area {
     width: 100%;
-    height: 40%;
+    height: 30%;
     margin: 0 auto;
+    margin-top: 20%;
   }
 
   .op-poke-area-wrap,
@@ -677,16 +678,14 @@
   .my-poke-area,
   .op-poke-area {
     width: 100%;
-    height: 100%;
     flex: 0 0 0px;
     margin-top: 40px;
     /* justify-content: flex-start; */
   }
 
   .poke-img-wrapper {
-    position: relative;
     width: 100%;
-    height: 100%;
+    min-height: 150px;
     /* align-items: flex-start; */
   }
 
@@ -702,14 +701,14 @@
   /* ポケモン画像 */
   .my-poke-img,
   .op-poke-img {
-    width: 50%;
+    width: 70%;
     height: auto;
     position: relative;
     z-index: 5;
   }
 
   .poke-ground {
-    width: 60%;
+    width: 70%;
     height: 50px;
   }
 
