changes for amplify

--- a/src/App.css
+++ b/src/App.css
@@ -785,7 +785,7 @@
   /* コマンドエリア======================================================= */
   .cmd-text-area {
     height: 50px;
-    margin-top: 8px;
+    margin-top: 15%;
   }
 
   .text-area {
