changes for amplify

--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden; /* スクロールバーを非表示に */
+  overflow: hidden;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 h1 {
@@ -27,6 +35,10 @@ h1 {
 }
 
 h2 {
+  margin: 0;
+}
+
+p {
   margin: 0;
 }
 
@@ -49,9 +61,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
