--- a/src/css/App.css
+++ b/src/css/App.css
@@ -454,15 +454,43 @@
   gap: 2%;
 }
 
-.weapon-cmd-btns button {
+.weapon-btn-wrap {
+  display: flex;
   width: 100%;
   height: 100%;
+}
+
+.weapon-cmd-btn {
+  width: 75%;
+  height: 100%;
+  margin-right: 2%;
+  border-radius: 0.5rem;
   background-color: #4CAF50;
   color: white;
 }
 
-.weapon-cmd-btns button:hover {
+.weapon-cmd-btn:hover {
   background-color: #45a049;
+}
+
+.weapon-detail-btn {
+  width: 25%;
+  height: 100%;
+  border-radius: 0.5rem;
+  background-color: ivory;
+}
+
+.poke-btn-wrap {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.poke-detail-btn {
+  width: 25%;
+  height: 100%;
+  border-radius: 0.5rem;
+  background-color: ivory;
 }
 
 .weapon-cmd-area .other-btns {
@@ -470,6 +498,7 @@
   flex-direction: column;
   flex: 1;
   gap: 2%;
+  height: 100%;
 }
 
 .terastal-cmd-btn {
@@ -481,8 +510,7 @@
 }
 
 .change-cmd-btn {
-  /* width: ; */
-  height: 100%;
+  width: 75%;
   background-color: lightblue;
   color: white;
 }
@@ -600,7 +628,12 @@
   background-color: rgba(0, 0, 0, 0.7);
   font-size: 14px;
   color: white;
+  text-align: left;
   transform: translateX(-50%);
+}
+
+p {
+  margin: 0.5em 0;
 }
 
 /* 勝敗画面============================================================= */
@@ -679,7 +712,7 @@
   }
 }
 
-@media screen and (max-width: 450px) {
+/* @media screen and (max-width: 450px) {
   .top-screen {
     width: 100%;
     height: 100%;
@@ -697,7 +730,7 @@
     font-size: 1.2rem;
   }
 
-  /* ============================================= */
+  =============================================
   .select-area {
     padding: 4% 2% 2% 2%;
   }
@@ -764,7 +797,7 @@
     font-size: 1.5rem;
   }
 
-  /* //================================ */
+  //================================
   .battle-command-area-wrap {
     width: 100%;
     height: 100%;
@@ -785,7 +818,6 @@
   .my-poke-area,
   .op-poke-area {
     width: 100%;
-    /* height: 85%; */
   }
 
   .terastal-img-area {
@@ -823,7 +855,6 @@
 
   .hp-area-header {
     width: 100%;
-    /* height: 50%; */
     margin-bottom: 3%;
     font-weight: normal;
   }
@@ -850,14 +881,12 @@
   }
 
   .poke-circle {
-    /* width: 33%; */
     height: 100%;
   }
 
   .op-hp-container,
   .my-hp-container {
     width: 100%;
-    /* height: 30%; */
   }
 
   .op-hp-bar,
@@ -870,7 +899,7 @@
     font-size: 0.7rem;
   }
 
-  /* コマンドエリア======================================================= */
+  コマンドエリア=======================================================
   .cmd-text-area {
     padding-top: 5%;
   }
@@ -906,9 +935,8 @@
     gap: 2%;
   }
 
-  .weapon-cmd-btn {
-    width: 30%;
-    margin-right: 8px;
+  .poke-btn-wrap {
+    flex: 1;
   }
 
   .weapon-cmd-area .other-btns {
@@ -965,7 +993,9 @@
   }
 
   .tooltip {
-    opacity: 0;
+    width: 40%;
+    padding: 1%;
+    font-size: 14px;
   }
 
   .result-screen button {
@@ -973,7 +1003,7 @@
     padding: 4% 2%;
   }
 
-}
+} */
 
 /* アニメーション========================================================= */
 @keyframes fadeIn {
