--- a/src/css/App.css
+++ b/src/css/App.css
@@ -712,7 +712,7 @@ p {
   }
 }
 
-/* @media screen and (max-width: 450px) {
+@media screen and (max-width: 450px) {
   .top-screen {
     width: 100%;
     height: 100%;
@@ -730,7 +730,7 @@ p {
     font-size: 1.2rem;
   }
 
-  =============================================
+  /* ============================================= */
   .select-area {
     padding: 4% 2% 2% 2%;
   }
@@ -797,7 +797,7 @@ p {
     font-size: 1.5rem;
   }
 
-  //================================
+  /* //================================ */
   .battle-command-area-wrap {
     width: 100%;
     height: 100%;
@@ -899,7 +899,7 @@ p {
     font-size: 0.7rem;
   }
 
-  コマンドエリア=======================================================
+  /* コマンドエリア======================================================= */
   .cmd-text-area {
     padding-top: 5%;
   }
@@ -1003,7 +1003,7 @@ p {
     padding: 4% 2%;
   }
 
-} */
+}
 
 /* アニメーション========================================================= */
 @keyframes fadeIn {
